[package]
name = "containerd-shim-protos"
version = "0.7.0"
authors = [
  "Maksym Pavlenko <pavlenko.maksym@gmail.com>",
  "The containerd Authors",
]
description = "TTRPC bindings for containerd shim interfaces"
keywords = ["containerd", "shim", "containers", "ttrpc", "client"]
categories = ["api-bindings", "asynchronous"]

edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
sandbox = []
docs = []

[[example]]
name = "shim-proto-server"
path = "examples/ttrpc-server.rs"

[[example]]
name = "shim-proto-client"
path = "examples/ttrpc-client.rs"

[[example]]
name = "shim-proto-connect"
path = "examples/connect.rs"

[dependencies]
trapeze = "0.5.1"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
trapeze-codegen = "0.5.1"

[dev-dependencies]
log.workspace = true
simple_logger = { version = "4.0", default-features = false, features = [
  "stderr",
] }
tokio = { workspace = true, features = ["full"] }

[package.metadata.docs.rs]
features = ["docs"]
